Bug 1146561 - Add back the visibility check for Mac plugins. r=jmuizelaar, a=sledru